--- a/java_conceitos_basicos/bytebank-herdado/bin/.gitignore
+++ b/java_conceitos_basicos/bytebank-herdado/bin/.gitignore
@@ -7,3 +7,7 @@
 /AutenticacaoUtil.class
 /Cliente.class
 /TesteSistema.class
+/Gerente.class
+/SistemaInterno.class
+/TesteFuncionario.class
+/TesteReferencias.class
